<resources>
    <string name="app_name">My_Book</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="fragment_about">Fragment About</string>
    <string name="list_items">List Items</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="rs_250">Rs 250</string>
    <string name="reviews">Reviews</string>
    <string name="booklogo">BookLogo</string>
    <string name="check_internet">Check Internet</string>
</resources>